Fix spacing for quickedit

--- a/trunk/assets/phases-post-list.css
+++ b/trunk/assets/phases-post-list.css
@@ -11,3 +11,6 @@
 .phases-note {
 	white-space: pre-line;
 }
+#wpbody-content .inline-edit-row-page .phases-quickedit {
+	margin-top: 0;
+}
